--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">EventHub</string>
+    <string name="facebook_app_id">123456</string><string name="facebook_client_token">456789</string>
+
 </resources>
