configure fb and google login

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">EventHub</string>
-    <string name="facebook_app_id">123456</string><string name="facebook_client_token">456789</string>
+    <string name="facebook_app_id">8648095141908206</string><string name="facebook_client_token">4beec92aa634a9e212613d875a69a38f</string>
 
 </resources>
